--- a/index.html
+++ b/index.html
@@ -27,6 +27,26 @@
                 <p class="header_main_text">街を作る。未来を作る。</p>
             </div>
         </div>
+        <footer class="footer">
+            <div class="footer_wrap">
+                <div class="footer_nav">
+                    <p>
+                        <a href="#">
+                            <img src="images/footer_logo.png" alt="蒼乃建設" class="footer_logo">
+                        </a>
+                    </p>
+                    <nav class="footer_nav_list">
+                        <ul>
+                            <li><a href="#">企業理念</a></li>
+                            <li><a href="#">施工事例</a></li>
+                            <li><a href="#">採用情報</a></li>
+                            <li><a href="#">お問い合わせ</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <p class="copyright">Copyright © 2020 Aono Corporation.</p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
