--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
                 <p class="header_main_text">街を作る。未来を作る。</p>
             </div>
         </div>
+        <div class="info"></div>
+        <div class="example"></div>
+        <div class="sub">
+            <a href="#" class="sub_img"><img src="images/company.png" alt="企業理念"></a>
+            <a href="#" class="sub_img"><img src="images/recruit.png" alt="採用情報"></a>
+            <a href="#" class="sub_img"><img src="images/contact.png" alt="お問い合わせ"></a>
+        </div>
         <footer class="footer">
             <div class="footer_wrap">
                 <div class="footer_nav">
