--- a/index.html
+++ b/index.html
@@ -27,7 +27,35 @@
                 <p class="header_main_text">街を作る。未来を作る。</p>
             </div>
         </div>
-        <div class="info"></div>
+        <div class="info">
+            <h2 class="info_title">お知らせ</h2>
+            <ul class="info_list">
+                <li>
+                    <a href="#">
+                        <span>2020.11.17
+                            <span class="info_border">お知らせ</span>
+                        </span>
+                        本社打ち合わせ室が完成しました。
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span>2020.11.10
+                            <span class="info_border">お知らせ</span>
+                        </span>
+                        『メディア掲載』 住宅雑誌 2020年11月号
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span>2020.11.01
+                            <span class="info_border">お知らせ</span>
+                        </span>
+                        ホームページが完成しました。
+                    </a>
+                </li>
+            </ul>
+        </div>
         <div class="example"></div>
         <div class="sub">
             <a href="#" class="sub_img"><img src="images/company.png" alt="企業理念"></a>
