--- a/index.html
+++ b/index.html
@@ -56,7 +56,30 @@
                 </li>
             </ul>
         </div>
-        <div class="example"></div>
+        <div class="example">
+            <h3 class="example_title">施工事例</h3>
+            <ul class="example_list">
+                <li>
+                    <dl>
+                        <dt class="example_phot"><img src="images/building1.png" alt=""></dt>
+                        <dd class="example_name">M様邸新築工事</dd>
+                        <dd class="example_place">埼玉県</dd>
+                        <dd class="example_details"><a href="#"><img src="images/more.png" alt="詳細を見る"></a></dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl>
+                        <dt class="example_phot"><img src="images/building2.png" alt=""></dt>
+                        <dd class="example_name">スカイビル</dd>
+                        <dd class="example_place">東京都</dd>
+                        <dd class="example_details"><a href="#"><img src="images/more.png" alt="詳細を見る"></a></dd>
+                    </dl>
+                </li>
+            </ul>
+            <p class="example_btn">
+                <a href="#">施工実績一覧</a>
+            </p>
+        </div>
         <div class="sub">
             <a href="#" class="sub_img"><img src="images/company.png" alt="企業理念"></a>
             <a href="#" class="sub_img"><img src="images/recruit.png" alt="採用情報"></a>
