class info_list_block edit

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <ul class="info_list">
                 <li>
                     <a href="#">
-                        <span>2020.11.17
+                        <span class="info_list_block">2020.11.17
                             <span class="info_border">お知らせ</span>
                         </span>
                         本社打ち合わせ室が完成しました。
@@ -45,7 +45,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <span>2020.11.10
+                        <span class="info_list_block">2020.11.10
                             <span class="info_border">お知らせ</span>
                         </span>
                         『メディア掲載』 住宅雑誌 2020年11月号
@@ -53,7 +53,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <span>2020.11.01
+                        <span class="info_list_block">2020.11.01
                             <span class="info_border">お知らせ</span>
                         </span>
                         ホームページが完成しました。
