--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <p class="copyright">Copyright © 2020 Aono Corporation.</p>
             </div>
         </footer>
-        <form name="contact" method="POST" netlify>
+        <form name="contact" method="POST" action="/success.html" netlify>
             <p>
               <label>Your Name: <input type="text" name="name" /></label>   
             </p>
