--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             <p>
               <button type="submit">Send</button>
             </p>
+            <label>File: <input type="file" name="file" /></label>
           </form>
     </div>
 </body>
